--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,40 @@ services:
   postgres:
     image: postgres:11.9
     restart: always
-    ports:
-      - 15432:5432
-    volumes:
-      - ./data/postgres:/var/lib/postgresql/data     
     environment:
       POSTGRES_USER: "prisma"
       POSTGRES_PASSWORD: "prisma"
       POSTGRES_DB: "sabdb"
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data
+  backend:
+    build: server/
+    environment:
+      NODE_ENV: development
+    command: npm run dev
+    stdin_open: true
+    tty: true
+    volumes:
+      - ./server/prisma:/app/prisma
+      - ./server/api:/app/api
+    depends_on:
+      - postgres
+  frontend:
+    build: client/
+    environment:
+      NODE_ENV: development
+    command: npm run start
+    stdin_open: true
+    tty: true
+    volumes:
+      - ./client/src:/app/src
+  nginx:
+    image: nginx:1.18-alpine
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./data/log:/log
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - frontend
+      - backend
